# CMake_Library_Template

./: .gitignore  CMakeLists.txt  README.md
include/greeter/: hello.hpp
include/hello/: hello.hpp
src/: hello.cpp  internal.cpp  internal.hpp
